# EKF

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml
.cursor/rules/cpp_rules/: cpp.mdc
.cursor/rules/genrate_rulse/: gener.mdc
.cursor/rules/learn_rules/: learn.mdc
.cursor/rules/work_rules/: work.mdc
.doc/: 2025-08-22-caveat-the-messages-below-were-generated-by-the-u.md  2025-08-22-caveat-the-messages-below-were-generated-by-the-u.txt  2025-08-22-this-session-is-being-continued-from-a-previous-co.txt
doc/: phase_1.md  theory.md
include/ekf_localization/: ekf_core.h  ekf_core.hpp  ekf_node.h  utils.hpp
src/: ekf_core.cpp  ekf_node.cpp  utils.cpp
